src/test/ui/parser/trait-item-with-defaultness-fail-semantic.stderr
error: `default` is only allowed on items in `impl` definitions
  --> $DIR/trait-item-with-defaultness-fail-semantic.rs:6:5
   |
LL |     default const A: u8;
   |     -------^^^^^^^^^^^^^
   |     |
   |     `default` because of this

error: `default` is only allowed on items in `impl` definitions
  --> $DIR/trait-item-with-defaultness-fail-semantic.rs:7:5
   |
LL |     default const B: u8 = 0;
   |     -------^^^^^^^^^^^^^^^^^
   |     |
   |     `default` because of this

error: `default` is only allowed on items in `impl` definitions
  --> $DIR/trait-item-with-defaultness-fail-semantic.rs:8:5
   |
LL |     default type D;
   |     -------^^^^^^^^
   |     |
   |     `default` because of this

error: `default` is only allowed on items in `impl` definitions
  --> $DIR/trait-item-with-defaultness-fail-semantic.rs:9:5
   |
LL |     default type C: Ord;
   |     -------^^^^^^^^^^^^^
   |     |
   |     `default` because of this

error: `default` is only allowed on items in `impl` definitions
  --> $DIR/trait-item-with-defaultness-fail-semantic.rs:10:5
   |
LL |     default fn f1();
   |     -------^^^^^^^^^
   |     |
   |     `default` because of this

error: `default` is only allowed on items in `impl` definitions
  --> $DIR/trait-item-with-defaultness-fail-semantic.rs:11:5
   |
LL |     default fn f2() {}
   |     -------^^^^^^^^
   |     |
   |     `default` because of this

error: aborting due to 6 previous errors

